--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
 
+# Ignore vendor as this is throw away code
+vendor/
 
 # User-specific stuff:
 .idea/**/workspace.xml
